fixes layout issues sub 1200px

--- a/src/app/sidebar/sidebar.component.less
+++ b/src/app/sidebar/sidebar.component.less
@@ -5,10 +5,6 @@
   width: 30px;
 }
 
-.container-navbar-top {
-  padding-top: 70px;
-}
-
 .nav > li > a:hover, .nav > li > a.active {
   background-color: @gray-base;
 }
